--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development gulp",
-    "build": "NODE_ENV=production gulp"
+    "start": "cross-env NODE_ENV=development gulp",
+    "build": "cross-env NODE_ENV=production gulp"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
@@ -29,5 +29,8 @@
     "@babel/plugin-transform-destructuring": "^7.5.0",
     "@babel/plugin-transform-template-literals": "^7.4.4"
   },
-  "name": "yeoman"
+  "name": "yeoman",
+  "dependencies": {
+    "cross-env": "^6.0.3"
+  }
 }
